<resources>
    <string name="crash_dialog_title">应用运行出现异常</string>
    <string name="crash_error_detail">错误详情</string>
    <string name="date_format">日期格式</string>
    <string name="im_bookmark_text">*.html: 绝大部分浏览器使用的格式，推荐使用\n*.bf: Vie 浏览器使用的格式，方便用户从 Vie 迁移到 VieY\n*.mbak: M 浏览器及衍生软件使用的格式，推荐在导出书签时用 *.html 而不是 *.mbak\n*.xbel: Linux 桌面浏览器和部分同步插件使用的格式\n*.txt 部分浏览器使用的格式，可其 设置-备份 中进行导出\n*.ini: Lagrange 使用的格式，在其设置-导出用户数据后，获取一个压缩包文件，解压这个压缩包即可找到 bookmarks.ini</string>
    <string name="im_bookmark_tips">特殊格式及对应导出方式</string>
    <string name="import_empty">哎呀，没有新增内容呢</string>
    <string name="task_id">任务 ID</string>
    <string name="status">状态</string>
    <string name="file_size_unkonw">文件大小未知</string>
    <string name="category">分类</string>
    <string name="downloaded">已下载</string>
    <string name="progress">进度</string>
    <string name="download_speed">下载速度</string>
    <string name="thread_count">线程数</string>
    <string name="segment_count">分段数</string>
    <string name="save_path">保存路径</string>
    <string name="download_link">下载链接</string>
    <string name="finish_time">完成时间</string>
    <string name="note">备注</string>
    <string name="error_msg">错误信息</string>
    <string name="properties">属性</string>
    <string name="no_bookmark">书签不存在</string>
    <string name="edit">编辑</string>
    <string name="batch_open">批量打开</string>
    <string name="other_offer">调用者提供</string>
    <string name="viey_offer">VieY 提供</string>
    <string name="exit_page">退出页面</string>
    <string name="other_open">其他打开</string>
    <string name="refresh">刷新页面</string>
    <string name="go_back">后退一步</string>
    <string name="go_forward">前进一步</string>
    <string name="clip_null">剪贴板为空</string>
    <string name="no_app_open">哎呀，没有对应的应用呢</string>
    <string name="url_null">哎呀，未找到链接</string>
    <string name="no_select">哎呀，没有选中文本</string>
    <string name="no_contents">哎呀，当前网页无法生成目录</string>
    <string name="paste">粘贴</string>
    <string name="search">搜索</string>
    <string name="select_all">全选</string>
    <string name="cut">剪切</string>
    <string name="cuted">已剪切</string>
    <string name="translate">翻译</string>
    <string name="select_all_js">选择所有</string>
    <string name="record">记录</string>
    <string name="record_fail">记录失败</string>
    <string name="open_fail">打开失败</string>
    <string name="recorded">已记录</string>
    <string name="more">更多</string>
    <string name="fullscreen">全屏</string>
    <string name="contents">页面目录</string>
    <string name="save_fail">保存失败</string>
    <string name="plz_save">这个文件不支持预览，VieY 已经缓存了该文件，您可以点击下载按钮，保存此文件</string>
    <string name="share">分享</string>
    <string name="max_concurrent_tasks">同时下载任务数</string>
    <string name="undefined">未知</string>
    <string name="default_threads">多线程分片数</string>
    <string name="max_retry_count">失败重试次数</string>
    <string name="show_download_notice">显示下载通知</string>
    <string name="auto_install_apk">下载完成后自动安装</string>
    <string name="volume_key_page">音量键翻页</string>
    <string name="search_download">搜索文件名 / 链接</string>
    <string name="custom_tab">外部浏览页</string>
    <string name="net_fail">网络异常</string>
    <string name="close_other_win">关闭其他窗口</string>
    <string name="close_now_win">关闭当前窗口</string>
    <string name="share_fail">分享失败</string>
    <string name="redownload">重新下载</string>
    <string name="un_show_info">不显示详细信息</string>
    <string name="show_info">显示详细信息</string>
    <string name="redownloading">已开始重新下载</string>
    <string name="no_dwontask">没有对应的下载任务</string>
    <string name="diy">自定义</string>
    <string name="bookmarks_count">%1$s 个书签</string>
    <string name="folder_count">%1$s 个文件夹</string>
    <string name="pause_task">已暂停 %1$s 个任务</string>
    <string name="start_task">已开始 %1$s 个任务</string>
    <string name="wait">等待</string>
    <string name="start">开始</string>
    <string name="all">全部</string>
    <string name="pic">图像</string>
    <string name="music">音频</string>
    <string name="video">视频</string>
    <string name="apk">安装包</string>
    <string name="zip">压缩包</string>
    <string name="other">其他</string>
    <string name="doc">文档</string>
    <string name="all_start">全部开始</string>
    <string name="pause">暂停</string>
    <string name="all_pause">全部暂停</string>
    <string name="finish">完毕</string>
    <string name="download_unfinish">下载未完成</string>
    <string name="add_download">新建下载</string>
    <string name="add_file_fail">创建文件失败</string>
    <string name="dxc_fail">多线程分片失败</string>
    <string name="fail_to_con">无法连接服务器</string>
    <string name="no_space">磁盘空间不足</string>
    <string name="dis_dxc_download">不支持多线程</string>
    <string name="custom_tab_tip">外部应用调用 CustomTabs 时会默认打开这里...\n点我隐藏本段话</string>
    <string name="magic">愛と奇跡の魔法物語</string>
    <string name="download_threads">线程</string>
    <string name="file_link">文件链接</string>
    <string name="import_bookmarks">导入书签</string>
    <string name="export_bookmarks">导出书签</string>
    <string name="import_success">导入成功</string>
    <string name="export_success">导出成功</string>
    <string name="import_failed">哎呀，导入失败</string>
    <string name="export_failed">哎呀，导出失败</string>
    <string name="download_file">你想要下载此文件吗？</string>
    <string name="fastname">简称</string>
    <string name="no_custom_engine">当前没有自定义搜索引擎</string>
    <string name="engine_tip">输入“简称 内容”，可以快速使用对应引擎搜索，注意搜索引擎链接务必包含 %%s，%%s 用于替换关键词</string>
    <string name="engine_url_need_s">哎呀，请包含 %s 为替换词</string>
    <string name="del_search_engine">删除自定义搜索引擎</string>
    <string name="add_search_engine">添加自定义搜索引擎</string>
    <string name="use_custom_tab">启用 CustomTabs</string>
    <string name="home_mode">主页书签显示模式</string>
    <string name="no_null">哎呀，不能为空，请输入内容</string>
    <string name="ban_operation">哎呀，这个操作不允许</string>
    <string name="had_folder">哎呀，已存在同名文件夹</string>
    <string name="had_bookmark">哎呀，已存在这个书签啦</string>
    <string name="del_folder">确定删除该文件夹及内部所有内容？</string>
    <string name="root_folder">根目录</string>
    <string name="confirm">确定</string>
    <string name="current">当前</string>
    <string name="back_folder">返回上级目录</string>
    <string name="folder">文件夹</string>
    <string name="folder_name">文件夹名称</string>
    <string name="add_folder">新建文件夹</string>
    <string name="sele_folder">选择文件夹</string>
    <string name="file">文件</string>
    <string name="text">文本</string>
    <string name="submit">提交</string>
    <string name="submit_text">提交内容</string>
    <string name="file_name">文件名称</string>
    <string name="file_size">文件大小</string>
    <string name="file_mime">文件类型</string>
    <string name="img_load_fail">图片加载失败</string>
    <string name="loading">正在加载中...</string>
    <string name="embed">嵌入</string>
    <string name="open_out_link">页面请求打开外部应用：</string>
    <string name="you_can_down">你可以在此处下载源码：</string>
    <string name="confirm_delete_content">确定要删除此内容吗？</string>
    <string name="advanced_option">高级选项</string>
    <string name="cert_advanced_desc">自定义证书主题与扩展字段，多个用英文逗号分隔</string>
    <string name="cert_hint_cn">CN 通用名称，例如 test.local</string>
    <string name="cert_hint_dns_multi">DNS域名（多个逗号分隔），例如 a.com,b.test</string>
    <string name="cert_hint_ip_multi">IP地址（多个逗号分隔），例如 192.168.1.1,127.0.0.1</string>
    <string name="cert_hint_valid_days">证书有效天数，例如 3650</string>
    <string name="cert_hint_userid">用户 ID</string>
    <string name="cert_hint_domain">域名</string>
    <string name="cert_hint_org">组织名称 (O)</string>
    <string name="cert_hint_country">国家代码，如 CN</string>
    <string name="cert_hint_email">Email 邮箱地址</string>
    <string name="socks5_hint">socks5://username:password@host:port/</string>
    <string name="req_too_long1024">哎呀，请求行过长，已经自动截取</string>
    <string name="about_info">关于 VieY</string>
    <string name="open_source_license">开源协议</string>
    <string name="official_website">官方网站</string>
    <string name="feedback">意见反馈</string>
    <string name="general">通用</string>
    <string name="privacy">隐私</string>
    <string name="add">添加</string>
    <string name="advanced">高级</string>
    <string name="download">下载</string>
    <string name="gesture">手势</string>
    <string name="customize">定制</string>
    <string name="pull_refresh">下拉刷新</string>
    <string name="proxy">用户代理</string>
    <string name="green_app_declaration">VieY 浏览器积极履行《Android 绿色应用公约》</string>
    <string name="welcome_title">欢迎使用 VieY 浏览器</string>
    <string name="welcome">欢迎</string>
    <string name="should_agree">哎呀，要阅读并同意后勾选所有选项呢</string>
    <string name="welcome_desc">欢迎使用 VieY 浏览器，\n初次使用请完成基础设置并阅读相关内容</string>
    <string name="i_had_read">我已阅读并同意</string>
    <string name="privacy_policy">《隐私政策》</string>
    <string name="user_agreement">《用户协议》</string>
    <string name="opensource_url">开源地址</string>
    <string name="btn_start_use">同意并进入</string>
    <string name="btn_no_use">拒绝并退出</string>
    <string name="quick_url_operation">快捷网址操作</string>
    <string name="view_ssl_cert">查看 SSL 证书</string>
    <string name="view_cookie">查看 Cookie</string>
    <string name="view_ip">查看 IP</string>
    <string name="open_settings">打开设置</string>
    <string name="extract_page_cert">提取页面证书</string>
    <string name="data_blob_url">哎呀，这是数据流链接，暂时不支持这个操作</string>
    <string name="web_permission_request">网页权限申请</string>
    <string name="request_camera_mic">请求使用【摄像头拍照】和【麦克风录音】</string>
    <string name="request_camera">请求使用【摄像头拍照】</string>
    <string name="request_mic">请求使用【麦克风录音】</string>
    <string name="web_location_request">网页请求定位</string>
    <string name="web_location_msg">\n是否允许该网页获取设备位置？</string>
    <string name="site">网站</string>
    <string name="process_gone">渲染进程退出，是否为崩溃导致: </string>
    <string name="copied">已复制</string>
    <string name="title">标题</string>
    <string name="url">网址</string>
    <string name="file_choose">选择文件</string>
    <string name="file_choose_hint">您可以调用系统文件选择器，或者直接输入绝对路径选择文件，若支持多文件上传时，可换行输入多个文件的绝对路径</string>
    <string name="system_chooser">使用系统选择器</string>
    <string name="use_input_path">使用输入路径</string>
    <string name="push_to_refresh">松手刷新页面</string>
    <string name="refreshing">正在刷新...</string>
    <string name="keep_push">继续下拉刷新</string>
    <string name="restart_app">重启软件</string>
    <string name="restart_txt">当前操作需要重启软件，您确认吗？</string>
    <string name="go_top">回到顶部</string>
    <string name="go_dwn">去到底部</string>
    <string name="go_search">马上搜索</string>
    <string name="toolbar_position">工具栏位置</string>
    <string name="download_image">下载图片</string>
    <string name="view_image">查看图片</string>
    <string name="share_image">分享图片</string>
    <string name="open_link">打开链接</string>
    <string name="copy_link_text">复制链接文本</string>
    <string name="background_open">后台打开</string>
    <string name="new_window_open">新窗口打开</string>
    <string name="page_info">页面信息</string>
    <string name="cert_btn_clipboard_pem">从剪贴板获取 PEM 证书</string>
    <string name="cert_gen_title_1">① 生成自签名证书 (p12 / bks)</string>
    <string name="cert_hint_gen_pwd">设置证书密码</string>
    <string name="cert_btn_gen_p12">生成 PKCS12 文件</string>
    <string name="cert_btn_gen_bks">生成 BKS 文件</string>
    <string name="cert_gen_title_2">② PEM 证书+私钥 → PKCS12</string>
    <string name="cert_btn_select_pem_cert">选择证书 PEM(.crt/.pem)</string>
    <string name="cert_btn_select_pem_key">选择私钥 PEM(.key)</string>
    <string name="cert_hint_pem_out_pwd">输出 PKCS12 文件的密码</string>
    <string name="cert_btn_pem_to_p12">执行转换为 PKCS12 文件</string>
    <string name="ua">用户标识</string>
    <string name="ua_preset">预设 UA</string>
    <string name="ua_custom">自定义 UA</string>
    <string name="ua_input_hint">输入自定义 UA 字符串，留空使用系统默认</string>
    <string name="cert_settings">证书设置</string>
    <string name="cert_add">添加证书</string>
    <string name="cert_clean">停用证书</string>
    <string name="cert_create">创建证书</string>
    <string name="cert_tip">支持导入 PKCS12(.p12 .pfx) / BKS(.bks) / PEM(.pem .crt&amp;.key) 客户端证书，导入 PEM 类型时，请点击创建证书按钮</string>
    <string name="save">保存</string>
    <string name="share_link">分享链接</string>
</resources>